--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     }
   ],
   "engines": {
-    "node": ">=12.x.x <=16.x.x",
+    "node": ">=14.19.1 <=18.x.x",
     "npm": ">=6.0.0"
   },
   "license": "MIT",
@@ -26,7 +26,7 @@
     "url": "git+https://github.com/remidej/strapi-plugin-todo.git"
   },
   "devDependencies": {
-    "@strapi-community/eslint-config": "^0.4.0",
+    "@strapi-community/eslint-config": "^0.4.3",
     "eslint": "^8.15.0",
     "prettier": "^2.6.2"
   },
